[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Actor/Enemy3.gd" type="Script" id=1]
[ext_resource path="res://Assets/Mob/Slime_Medium_Red.png" type="Texture" id=2]
[ext_resource path="res://src/Sounds/AudioPlayer.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.7158, 6.14602 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.1007, 0.313303 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )
speed = Vector2( 75, 550 )

[node name="enemy" type="Sprite" parent="."]
position = Vector2( -0.13124, -10 )
scale = Vector2( 0.920683, 0.721372 )
texture = ExtResource( 2 )
vframes = 4
hframes = 4

[node name="AudioPlayer" parent="." instance=ExtResource( 3 )]

[node name="EHit" type="CollisionShape2D" parent="."]
position = Vector2( -0.240189, -9.10615 )
scale = Vector2( 0.259931, 0.408516 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -0.445931, -10.4347 )
scale = Vector2( -0.747786, 0.66671 )
process_parent = true
physics_process_parent = true

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2( 0.164123, -17.2818 )
scale = Vector2( 8.99291, -4.12631 )
space_override = 1
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
modulate = Color( 0.0588235, 0.227451, 1, 1 )
position = Vector2( -0.0803464, -0.738547 )
scale = Vector2( 0.703928, 1.99423 )
shape = SubResource( 2 )
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
